Fixed a weird command issue which happens when compiling with Java 17 with lombok